# comfy-studio

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  models.py
backend/app/data/: __init__.py  builtin_workflows.json  templates.py
backend/app/dependencies/: auth.py
backend/app/middleware/: __init__.py  rate_limit.py  request_logger.py  slow_query.py
backend/app/routers/: __init__.py  ai_templates.py  ai_workflow.py  auth.py  batch.py  builtin_workflows.py  civitai.py  comfyui.py  comfyui_servers.py  health.py  marketplace.py  models.py  performance.py  prompts.py  settings.py  smart_create.py  templates.py  workflows.py
backend/app/schemas/: __init__.py  auth.py
backend/app/scripts/: import_loras.py  import_prompts.py
backend/app/services/: __init__.py  ai.py  auto_migrate.py  backup.py  cache.py  cleanup.py  comfyui.py  export_service.py  image_storage.py  multi_instance.py  notification.py  prompt_crawler.py  prompt_extractor.py  prompt_processor.py  quality_checker.py  seed_manager.py  smart_create_executor.py  smart_create_progress.py  storage.py  task_queue.py  websocket_pool.py  workflow_builder.py
backend/app/utils/: auth.py
backend/docs/: AUTH.md
backend/scripts/: README.md  add_content_hash_column.py  create_admin.py  migrate_content_hash.py  test_auth_api.py  update_content_hash.py
backend/tests/: conftest.py  run_tests.py  test_api.py  test_auth.py  test_check.py  test_models.py  test_services.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
(+50 files in other folders)
